tests/invalid-comment-start.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a comment to start with '//'.
// CHECK-NEXT: /x
// CHECK-NEXT: ^
/x
